r600c: use BASE_VTX_LOC & AUTO_INDEX for drawing nonindexed with offset

Saves cmd buffer space as we were generating indexes into cs  in this case.
This was laying around in https://bugs.freedesktop.org/show_bug.cgi?id=32768
for a long time.